[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codereviewer-ai-env"
version = "0.1.0"
description = "A real-world code review environment for AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core",
    "openai",
    "python-multipart",
    "httpx"
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server", "models.py"]