[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codereviewer-gym-v2"
version = "0.2.0"
description = "Advanced Code Review RL Gym"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core",
    "openai",
    "python-multipart",
    "httpx",
    "uv"
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server", "models.py"]